# gd32vf103-rust-template

./: Cargo.toml  README.md  memory.x
.cargo/: config
src/: main.rs
